[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scenes/Characters/InteractionPrompts/MechEditor/SelectableButton.gd" type="Script" id=1]
[ext_resource path="res://Fonts/BioSans_Regular.otf" type="DynamicFontData" id=2]
[ext_resource path="res://Images/Popups/MechEditor/ArrowGeneric.png" type="Texture" id=3]

[sub_resource type="DynamicFont" id=1]
size = 48
outline_size = 1
outline_color = Color( 0.290196, 0.341176, 0.52549, 1 )
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="Animation" id=3]
resource_name = "IconBob"
length = 0.5
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("TextureRect:rect_position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.35 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -10, 6 ), Vector2( -35, 6 ) ]
}

[node name="SelectableButton" type="Label"]
margin_right = 461.0
margin_bottom = 60.0
rect_pivot_offset = Vector2( 230.5, 30 )
focus_mode = 2
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 0.894118, 1 )
custom_colors/font_color_shadow = Color( 0.376471, 0.54902, 0.678431, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 1
custom_constants/shadow_as_outline = 1
text = "Selectable Button"
valign = 1
uppercase = true
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/focus = SubResource( 2 )
toggle_mode = true
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = -30.7005
margin_top = -24.0
margin_right = 17.2995
margin_bottom = 38.0
rect_rotation = 90.0
texture = ExtResource( 3 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/IconBob = SubResource( 3 )

[connection signal="focus_entered" from="." to="." method="_on_SelectableButton_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_SelectableButton_focus_exited"]
[connection signal="mouse_entered" from="Button" to="." method="_on_Button_mouse_entered"]
[connection signal="mouse_exited" from="Button" to="." method="_on_Button_mouse_exited"]
